<resources>
    <string name="app_name">El-Apunte</string>
    <string name="search">Search</string>
    <string name="filter">filter</string>
    <string name="theme_switcher">Theme Switcher</string>
    <string name="fab">fab</string>
    <string name="edit_note">Edit Note</string>
    <string name="create_note">New Note</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Start writing…</string>
    <string name="empty_note_error">Note must have title or content</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="discard_changes_confirmation">Discard changes?</string>
    <string name="no_changes_detected">No changes detected</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="empty_state">Empty notes illustration</string>
    <string name="no_notes_found">No notes found</string>
    <string name="add_first_note">Tap the + button to add your first note</string>
    <string name="save_note_error">Error saving note</string>
    <string name="delete_note_title">Delete Note</string>
    <string name="delete_note_message">Are you sure want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>